An error with the ID VueContainer was solved.

--- a/Source/index.html
+++ b/Source/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
       <div id="bodyVueContainer"></div>
+      <script src="../Public/webpack/bundle.js"></script>
   </body>
 </html>
