--- a/Source/index.html
+++ b/Source/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VueJS 3 & Webpack Basic Setup</title>
+    <link rel="icon" type="image/png" href="/Static/VueLogo.png">
   </head>
   <body>
       <div id="bodyVueContainer"></div>
