Sending Data from Root Node to Vue App was implemented.

--- a/Source/index.html
+++ b/Source/index.html
@@ -8,7 +8,11 @@
     <link rel="icon" type="image/png" href="/Static/VueLogo.png">
   </head>
   <body>
-      <div id="bodyVueContainer"></div>
+      <div id="bodyVueContainer">
+        <SourceToVueData
+          data-message="By: Jhon Navarrete">
+        </SourceToVueData>
+      </div>
       <script src="../Public/webpack/bundle.js"></script>
   </body>
 </html>
