The folders were restructured.

--- a/Static/index.html
+++ b/Static/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VueJS 3 & Webpack Basic Setup</title>
-    <link rel="icon" type="image/png" href="/Static/VueLogo.png">
+    <link rel="icon" type="image/png" href="../Public/Images/VueLogo.png">
   </head>
   <body>
       <div id="bodyVueContainer">
@@ -13,6 +13,6 @@
           data-message="By: Jhon Navarrete">
         </SourceToVueData>
       </div>
-      <script src="../Public/webpack/bundle.js"></script>
+      <script src="../Public/Webpack/bundle.js"></script>
   </body>
 </html>
